# cgol-cpp

./: CMakeLists.txt  README.md
data/: ex3.life  gosper_glider_gun.rle
include/: cgol.hpp  gui.hpp  parser_utils.hpp
src/: cgol.cpp  gui.cpp  main.cpp  parser_utils.cpp
tests/: tests.cpp
